﻿
27/2/2016:
* UP: var normalization upgraded: it now supports a stack of normalization contexts, making the behaviour undoable and fitting with recursive uses; it also supports use of
      normalization context in a pure way, passing it as argument to pretty_normalized
* UP: UnitTest module text output reworked and polished
* FIX: unit tests are currenlty all correct
* UP: translated type defined for enforcing a strongly typed behaviour of the translation sub-system, which was not robust - now it is


26/2/2016:
* FIX: location column numbers and biases are probably wrong: fixed now but not sure it's really done
* UP: UnitTest messages rewritten using PPrint library of document formatting combinators


25/12/2016:
* REFACT: enormous and complicated redesign and abstraction of pattern and constructor factories in Absyn
* FIX: T_Forall is now pretty printed with kind annotations on quantified vars when kind is not star
* REFACT: Intrinsic.envs0 are now computed lazyly
* FIX: datatype declarations fixed: need more testing of course, but seems to work


24/12/2016:
* REFACT: Globals.location type removed: it didn't make sense, as the superclass Parsing.location is enough
* NEW: location can now be merged with another location and subtend an area
* NEW: make_patterns generalizes the creation of multiple-occurrence constructors and active patterns given the single-shot versions of the constructor and the pattern
* UP: arrows and apps constructors and active patterns are now created by using make_patterns


23/2/2016:
* REFACT: reserved identifiers tools polished, as well as list special constructor names
* REFACT: wildcard_reserved_id does not exist anymore: fresh_reserved_id is used instead
* UP: list support completed
* UP: credits text in Args module revamped, as well as management of assembly attributes
* UP: the whole Intrinsic module has been revamped to support datatype definitions and other declarations
* UP: datatype declaration typechecking is under revamping